# aoc2025

./: .gitignore  Makefile  pyproject.toml
src/aoc2025/: day1.py  day2.py  day3.py  day4.py  utils.py
