[project]
name = "aoc2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Jewell",email = "chrisjewell@heidihealth.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "aoc2025", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
